--- a/user_data/config-BTCBUSD.json
+++ b/user_data/config-BTCBUSD.json
@@ -6,7 +6,7 @@
   "fiat_display_currency": "USD",
   "timeframe": "5m",
   "dry_run": true,
-  "dry_run_wallet": 1000,
+  "dry_run_wallet": 300,
   "cancel_open_orders_on_exit": false,
   "unfilledtimeout": {
     "buy": 10,
@@ -42,204 +42,13 @@
       "rateLimit": 200
     },
     "pair_whitelist": [
-      "1INCH/BUSD",
-      "AAVE/BUSD",
-      "ACM/BUSD",
-      "ADA/BUSD",
-      "AERGO/BUSD",
-      "ALGO/BUSD",
-      "ALICE/BUSD",
-      "ALPHA/BUSD",
-      "ANT/BUSD",
-      "AR/BUSD",
-      "ATA/BUSD",
-      "ATM/BUSD",
-      "ATOM/BUSD",
-      "AUCTION/BUSD",
-      "AUD/BUSD",
-      "AUDIO/BUSD",
-      "AUTO/BUSD",
-      "AVA/BUSD",
-      "AVAX/BUSD",
-      "AXS/BUSD",
-      "BADGER/BUSD",
-      "BAKE/BUSD",
-      "BAL/BUSD",
-      "BAND/BUSD",
-      "BAR/BUSD",
-      "BAT/BUSD",
-      "BCH/BUSD",
-      "BCHA/BUSD",
-      "BEL/BUSD",
-      "BIFI/BUSD",
-      "BNB/BUSD",
-      "BNT/BUSD",
-      "BOND/BUSD",
-      "BTC/BUSD",
-      "BTCST/BUSD",
-      "BTG/BUSD",
-      "BTT/BUSD",
-      "BURGER/BUSD",
-      "BZRX/BUSD",
-      "CAKE/BUSD",
-      "CELR/BUSD",
-      "CFX/BUSD",
-      "CHR/BUSD",
-      "CHZ/BUSD",
-      "CKB/BUSD",
-      "COMP/BUSD",
-      "COTI/BUSD",
-      "COVER/BUSD",
-      "CREAM/BUSD",
-      "CRV/BUSD",
-      "CTK/BUSD",
-      "CTSI/BUSD",
-      "CVP/BUSD",
-      "DASH/BUSD",
-      "DATA/BUSD",
-      "DEGO/BUSD",
-      "DEXE/BUSD",
-      "DF/BUSD",
-      "DGB/BUSD",
-      "DIA/BUSD",
-      "DNT/BUSD",
-      "DOCK/BUSD",
-      "DODO/BUSD",
-      "DOGE/BUSD",
-      "DOT/BUSD",
-      "EGLD/BUSD",
-      "ENJ/BUSD",
-      "EOS/BUSD",
-      "EPS/BUSD",
-      "ERN/BUSD",
-      "ETC/BUSD",
-      "ETH/BUSD",
-      "EUR/BUSD",
-      "FIL/BUSD",
-      "FIO/BUSD",
-      "FIS/BUSD",
-      "FLM/BUSD",
-      "FOR/BUSD",
-      "FORTH/BUSD",
-      "FRONT/BUSD",
-      "FTM/BUSD",
-      "FTT/BUSD",
-      "FXS/BUSD",
-      "GBP/BUSD",
-      "GHST/BUSD",
-      "GRT/BUSD",
-      "GTC/BUSD",
-      "HARD/BUSD",
-      "HBAR/BUSD",
-      "HEGIC/BUSD",
-      "HNT/BUSD",
-      "HOT/BUSD",
-      "ICP/BUSD",
-      "ICX/BUSD",
-      "IDEX/BUSD",
-      "INJ/BUSD",
-      "IOST/BUSD",
-      "IOTA/BUSD",
-      "IOTX/BUSD",
-      "IQ/BUSD",
-      "JST/BUSD",
-      "JUV/BUSD",
-      "KAVA/BUSD",
-      "KEEP/BUSD",
-      "KLAY/BUSD",
-      "KNC/BUSD",
-      "KP3R/BUSD",
-      "KSM/BUSD",
-      "LINA/BUSD",
-      "LINK/BUSD",
-      "LIT/BUSD",
-      "LPT/BUSD",
-      "LRC/BUSD",
-      "LTC/BUSD",
-      "LUNA/BUSD",
-      "MANA/BUSD",
-      "MASK/BUSD",
-      "MATIC/BUSD",
-      "MDX/BUSD",
-      "MIR/BUSD",
-      "MKR/BUSD",
-      "MLN/BUSD",
-      "NANO/BUSD",
-      "NEAR/BUSD",
-      "NEO/BUSD",
-      "NMR/BUSD",
-      "NU/BUSD",
-      "OCEAN/BUSD",
-      "OM/BUSD",
-      "OMG/BUSD",
-      "ONE/BUSD",
-      "ONT/BUSD",
-      "PAX/BUSD",
-      "PERP/BUSD",
-      "PHA/BUSD",
-      "POLS/BUSD",
-      "POND/BUSD",
-      "PROM/BUSD",
-      "PSG/BUSD",
-      "QTUM/BUSD",
-      "RAMP/BUSD",
-      "REEF/BUSD",
-      "RLC/BUSD",
-      "ROSE/BUSD",
-      "RSR/BUSD",
-      "RUNE/BUSD",
-      "RVN/BUSD",
-      "SAND/BUSD",
-      "SC/BUSD",
-      "SFP/BUSD",
-      "SHIB/BUSD",
-      "SKL/BUSD",
-      "SLP/BUSD",
-      "SNX/BUSD",
-      "SOL/BUSD",
-      "SRM/BUSD",
-      "STMX/BUSD",
-      "STRAX/BUSD",
-      "SUPER/BUSD",
-      "SUSHI/BUSD",
-      "SWRV/BUSD",
-      "SXP/BUSD",
-      "SYS/BUSD",
-      "THETA/BUSD",
-      "TKO/BUSD",
-      "TLM/BUSD",
-      "TOMO/BUSD",
-      "TORN/BUSD",
-      "TRB/BUSD",
-      "TRU/BUSD",
-      "TRX/BUSD",
-      "TUSD/BUSD",
-      "TVK/BUSD",
-      "TWT/BUSD",
-      "UFT/BUSD",
-      "UNFI/BUSD",
-      "UNI/BUSD",
-      "USDC/BUSD",
-      "UTK/BUSD",
-      "VET/BUSD",
-      "VIDT/BUSD",
-      "WAVES/BUSD",
-      "WIN/BUSD",
-      "WING/BUSD",
-      "WRX/BUSD",
-      "XEM/BUSD",
-      "XLM/BUSD",
-      "XMR/BUSD",
       "XRP/BUSD",
-      "XTZ/BUSD",
-      "XVG/BUSD",
-      "XVS/BUSD",
-      "YFI/BUSD",
-      "YFII/BUSD",
-      "ZEC/BUSD",
-      "ZEN/BUSD",
-      "ZIL/BUSD",
-      "ZRX/BUSD"
+      "BCH/BUSD",
+      "MATIC/BUSD",
+      "ETH/BUSD",
+      "BNB/BUSD",
+      "ADA/BUSD",
+      "BTC/BUSD"
     ],
     "pair_blacklist": []
   },
